--- a/scss/layouts/authentication/_signup.scss
+++ b/scss/layouts/authentication/_signup.scss
@@ -64,6 +64,7 @@
     color: inherit !important;
     font-family: inherit !important;
     font-size: inherit !important;
+    line-height: normal !important;
 }
 .ReactPasswordStrength-input {
     @include font-size(18px);
