--- a/scss/layouts/setting/_garage.scss
+++ b/scss/layouts/setting/_garage.scss
@@ -1,379 +1,36 @@
-#Garage-container{
-  @include margin-left(10px);
-  .Garage-add{
-    display: flex;
-    p{
-      font-family: Roboto;
-      @include font-size(17px);
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      text-align: $left;
-      margin-bottom: 0px;
-      margin-top: 20px;
-    }
-    Button{
-      display: flex !important;
-      background: $brand-color;
-      display: flex;
-      margin: 0px !important;
-      color: $white !important;
-      .icon-add-vehicle{
-        @include font-size(30px);
-      }
-      span{
-        line-height: 41px;
-        @include margin-left(6px);
-      }
-    }
+.empty{
+  .icon-vehicle{
+    display: inline-block;
   }
-  .seperator{
-    height: 2px;
-    width: 100%;
-    margin-bottom: 30px;
-    margin-top: 8px;
-  }
-  .Garage-box{
-    background: $white;
-    margin-bottom: 5px;
-    padding: side-values(10px);
-    border-radius: corner-values(20px 0 20px 20px) !important;
-    @include margin-left(5px);
-    label{
-      margin-bottom: 0px;
-      font-family: Roboto;
-      @include font-size(13px);
-      font-weight: normal;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: 2;
-      letter-spacing: normal;
-      opacity: 0.8;
-      .checkmark{
-        border-radius: 9px;
-      }
-    }
-    .seperator{
-      width: 1px;
-      height: 100%;
-      @include margin-left(100%);
-      margin-top: 0px;
-    }
-    .Garage-box_item{
-      .Garage-box_item-label{
-        p{
-          margin-bottom: 0px;
-          font-family: Roboto;
-          @include font-size(17px);
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-          text-align: $left;
-          @include margin-left(20px);
-        }
-      }
-      .Garage-footer{
-        height: 41px;
-        display: flex;
-        margin-top: 18px;
-        .btn-gray{
-          @include margin-left(20px);
-          margin-#{$right}: 10px;
-          .icon-edit{
-            @include font-size(18px);
-          }
-          span{
-            @include font-size(13px);
-            @include margin-left(6px);
-          }
-        }
-        .btn-delete{
-          background: none;
-          opacity: 0.6;
-          .icon-trash{
-            @include font-size(18px);
-          }
-          span{
-            @include font-size(13px);
-            @include margin-left(2px);
-          }
-        }
-      }
-    }
-  }
-}
-.garage-popup{
-  @include text-left;
-  // width: 700px;
-  .modal-content{
-    background: $white !important;
-    .modal-header{
-      .sec-header{
-        h1 {
-          @include text-capitalize;
-        }
-       span {
-        top: -12px;
-       }
-      }
-    }
-  }
-  .modal-body{
-    #vehicles{
-      margin-bottom: 50px;
-      background: $white;
-      form{
-        .group-shadow-input{
-          height: 0px;
-          top: 0px;
-        }
-        .css-10nd86i{
-          width: 100%;
-          padding: 10px;
-        }
-        .select-input{
-          height: auto;
-        }
-        .div-first-rounded{
-          margin-bottom: 20px;
-        }
-        .div-rounded{
-          margin-bottom: 20px;
-          .select-input{
-            border-radius: corner-values(20px 0 20px 20px) !important;
-          }
-        }
-        .div-last-rounded{
-          input{
-            border-radius: corner-values(20px 0 20px 20px) !important;
-          }
-          .input-group-prepend{
-            margin-top: 10px;
-          }
-        }
-        .vehicle-radio{
-          margin-bottom: 20px;
-        }
-        .btn-light{
-          height: auto;
-          background-color: $light-gray;
-          border-radius: corner-values(0 0 0 20px) !important;
-          box-shadow: 0px 18px 18px 0px rgba(0, 0, 0, 0.07);
-        }
-        .btn-primary{
-          @include margin-left(5px);
-          border-radius: corner-values(0 20px 20px 0) !important;
-          height: auto;
-        }
-      }
-    }
-  }
-}
-#garage-no-vehicle{
-  @include margin-left(10px);
-  p{
-    font-family: Roboto;
-    @include font-size(17px);
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    text-align: $left;
-    margin-bottom: 0px;
-  }
-  .seperator{
-    height: 2px;
-    width: 100%;
-  }
-  .add-vehicle{
-    text-align: center;
-    .icon-content{
-      justify-content: center;
-      display: flex;
-      p{
-        text-align: center;
-        @include font-size(100px);
-        margin-top: 20px;
-        opacity: 0.1;
-      }
-      .vehi-rotate{
-        @include margin-left(-30px);
-        margin-top: 50px;
-        height: 30px;
-        width: 70px;
-        border: 3px solid #dbd6d6;
-        border-radius: 40%;
-        padding: 5px;
-        transform: rotate(90deg);
-        text-align: center;
-        span{
-          font-family: Roboto;
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-          text-align: left;
-          color: #37363b;
-        }
-      }
-    }
-    .vehicle-text{
-      opacity: 0.5;
-      font-family: Roboto;
-      font-size: 30px;
-      font-weight: 300;
-      font-style: normal;
-      font-stretch: normal;
-      line-height: normal;
-      letter-spacing: normal;
-      text-align: center;
-      color: rgba(55, 54, 60, 0.5);
-    }
-    .btn-secondary{
-      display: inline-flex !important;
-      background: $brand-color;
-      color: $white;
-      margin-top: 16px;
-      .icon-add-vehicle{
-        @include font-size(30px);
-      }
-      span{
-        line-height: 41px;
-        @include margin-left(6px);
-      }
+  .rotate{
+    display: inline-block;
+    margin-bottom: 0;
+    @include font-size(100px);
+    font-weight: 300;
+    position: relative;
+    color: #e2e2e3;
+    line-height: 0.8;
+    #{$left}: -15px;
+    top: -10px;
+    span{
+      position: absolute;
+      transform: rotate(90deg);
+      @include font-size(15px);
+      color: $basic-gray;
+      top: 31px;
+      #{$left}: 4px;
     }
   }
 }
 
-.garage-mobile{
-  #garage-no-vehicle{
-    margin-top: 20px;
-    @include margin-left(0px);
-  }
-  #Garage-container{
-    @include margin-left(0px);
-    margin-top: 20px;
-    .Garage-add{
-      display: block;
-      p{
-        font-family: Roboto;
-        @include font-size(17px);
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
-        letter-spacing: normal;
-        text-align: $left;
-        margin-bottom: 10px;
-        margin-top: 0px;
-      }
-      Button{
-        display: flex !important;
-        background: $brand-color;
-        margin: 0px !important;
-        color: $white !important;
-        width: 100%;
-        .icon-add-vehicle{
-          @include font-size(30px);
-        }
-        span{
-          line-height: 41px;
-          @include margin-left(6px);
-        }
-      }
-    }
-    .seperator{
-      height: 2px;
-      width: 100%;
-      margin-bottom: 30px;
-      margin-top: 10px;
-    }
-    .Garage-box{
-      background: $white;
-      margin-bottom: 5px;
-      padding: side-values(10px);
-      border-radius: corner-values(20px 0 20px 20px) !important;
-      @include margin-right(0px);
-      @include margin-left(0px);
-      label{
-        margin-bottom: 0px;
-        font-family: Roboto;
-        @include font-size(13px);
-        font-weight: normal;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: 2;
-        letter-spacing: normal;
-        opacity: 0.8;
-        .checkmark{
-          border-radius: 9px;
-        }
-      }
-      .seperator{
-        width: 1px;
-        height: 100%;
-        @include margin-left(100%);
-        margin-top: 0px;
-      }
-      .Garage-box_item{
-        .Garage-box_item-label{
-          p{
-            margin-bottom: 0px;
-            font-family: Roboto;
-            @include font-size(17px);
-            font-weight: normal;
-            font-style: normal;
-            font-stretch: normal;
-            line-height: normal;
-            letter-spacing: normal;
-            text-align: $left;
-            @include margin-left(20px);
-          }
-        }
-        .Garage-footer{
-          height: 41px;
-          display: flex;
-          margin-top: 18px;
-          .btn-link{
-            @include margin-left(20px);
-            width: 66px;
-            text-align: center;
-            background: $light-gray !important;
-            border-radius: corner-values(0 20px 20px 20px) !important;
-            margin-#{$right}: 10px;
-            color: $black;
-            display: flex;
-            .icon-edit{
-              @include font-size(18px);
-            }
-            span{
-              @include font-size(13px);
-              @include margin-left(6px);
-            }
-          }
-          .btn-delete{
-            background: none;
-            opacity: 0.6;
-            display: flex;
-            .icon-trash{
-              @include font-size(18px);
-            }
-            span{
-              @include font-size(13px);
-              @include margin-left(2px);
-            }
-          }
-        }
-        &:nth-child(even) {
-          border-left: 1px solid #ebebeb;
-        }
-      }
+.setting-popup{
+  .modal-header{
+  .icon-add-vehicle{
+    @include font-size(45px);
+    &:before{
+      top: -11px;
     }
   }
+}
+
 }
