--- a/scss/main-ar/main-ar.scss
+++ b/scss/main-ar/main-ar.scss
@@ -17,7 +17,7 @@ $dir: rtl;
 @import "bootstrap-rtl/images";
 //@import "bootstrap-rtl/code";
 @import "bootstrap-rtl/grid";
-//@import "bootstrap-rtl/tables";
+@import "bootstrap-rtl/tables";
 @import "bootstrap-rtl/forms";
 //@import "bootstrap-rtl/buttons";
 @import "bootstrap-rtl/transitions";
