--- a/scss/main/main.scss
+++ b/scss/main/main.scss
@@ -16,7 +16,7 @@ $dir: ltr;
 @import "bootstrap/images";
 //@import "bootstrap/code";
 @import "bootstrap/grid";
-//@import "bootstrap/tables";
+@import "bootstrap/tables";
 @import "bootstrap/forms";
 //@import "bootstrap/buttons";
 @import "bootstrap/transitions";
