--- a/scss/base/_float_label.scss
+++ b/scss/base/_float_label.scss
@@ -40,20 +40,32 @@
         @content;
     }
   }
-
+  @mixin float-label-scaled-textarea {
+    &:placeholder-shown:not(:focus) + label {
+      margin-top: -12px;
+      top: 25px;
+      line-height: 25px;
+      @include font-size(18px);
+        @content;
+    }
+  }
   /* Default styling
    * https://github.com/tonystar/float-label-css/blob/master/scss/float-label.scss
    */
   .has-float-label {
     @include float-label-container;
     @include float-label;
-    input {
+    input{
       border-radius: 0;
       @include float-label-input;
       @include float-label-scaled {
-
       }
-
+    }
+    textarea {
+      border-radius: 0;
+      @include float-label-input;
+      @include float-label-scaled-textarea {
+      }
     }
 
   }
