--- a/scss/layouts/_quotation-request.scss
+++ b/scss/layouts/_quotation-request.scss
@@ -122,7 +122,7 @@
       &:first-child{
         position: relative;
         &::after{
-          content: "\4e";
+          content: "\e009";
           width: 38px;
           height: 38px;
           background: $white;
@@ -176,19 +176,36 @@
   }
   .open-garage{
     position: relative;
-    a{
+    .btn.btn-gray{
+      position: relative;
       @include font-size(19px);
       border-bottom-#{$right}-radius: 0 !important;
       margin-bottom: 5px;
       display: flex;
       align-items: center;
       padding: 6px 20px;
+      @include media-breakpoint-down(md){
+        padding-right: 10px;
+        padding-left: 10px;
+        span{
+          display: none;
+        }
+      };
       i{
         @include font-size(30px);
         height: 30px;
+        @include if-rtl{
+          -moz-transform: scaleX(-1);
+         -o-transform: scaleX(-1);
+         -webkit-transform: scaleX(-1);
+         transform: scaleX(-1);
+         filter: FlipH;
+         -ms-filter: "FlipH";
+         left: 5px;
+        };
       }
     }
-    p{
+    > p{
       position: absolute;
       top: -5px;
       #{$right}: 15px;
@@ -201,6 +218,71 @@
       border: 1px solid $white;
       min-width: 22px;
       text-align: center
+    }
+    .select-input{
+      position: absolute;
+      z-index: 3;
+      width: calc(100% - 15px);
+      height: 100%;
+      @include media-breakpoint-down(md){
+        width: calc(100% - 30px);
+      };
+      &:hover + a{
+        background: $dark-gray;
+      }
+    }
+
+    .select__indicators{
+      display: none;
+    }
+    .select__value-container,
+    .select__control{
+      background: transparent !important;
+    }
+    .select__single-value{
+      display: none !important;
+    }
+    .select__menu{
+      #{$left}: auto !important;
+      #{$right}:0 !important;
+      margin-top: -10px !important;
+      @include media-breakpoint-down(md){
+        #{$right}: 0 !important;
+
+      }
+    }
+    .placeholder{
+      display: flex;
+      align-items: center;
+      color: $basic-gray;
+      @include opacity(1);
+      i{
+        @include font-size(33px);
+        @include opacity(0.7);
+        margin-#{$right}: 5px;
+        height: 35px;
+      }
+      h6{
+        font-weight: 400;
+        @include font-size(16px);
+        margin-bottom: 0;
+        p{
+          @include font-size(13px);
+          @include opacity(0.8);
+          white-space: nowrap;
+          margin-top: 2px;
+          @include media-breakpoint-down(md){
+            display: none;
+          };
+        }
+      }
+    }
+    .select__menu-list{
+      .select__option{
+        padding-top: 20px;
+        padding-bottom: 20px;
+        @include font-size(16px);
+      }
     }
   }
   .sec-shadow{
@@ -221,7 +303,8 @@
       padding-bottom: 0;
     }
   }
-  .form-control{
+  .form-control,
+  .part-actions{
     height: 55px;
   }
   form{
@@ -383,10 +466,11 @@
     display: flex;
     align-items: center;
   }
+}
+.vehicle-info{
   .float-label{
     min-width: 160px;
   }
-
 }
 .part-array{
   .quantity{
