--- a/scss/layouts/setting/_orders.scss
+++ b/scss/layouts/setting/_orders.scss
@@ -1,44 +1,171 @@
-#Orders-container{
-#search{
-  margin-left:-25px;
-  input{
-    height: 20px;
-    -webkit-appearance: textfield;
-  	-webkit-box-sizing: content-box;
-  	font-family: inherit;
-  	font-size: 100%;
-    @include margin-right(100px);
+.orders-main{
+.search-order{
+  display: flex;
+  .select-input,
+  .search-input{
+    background: $white;
+    height: 35px;
+    display: flex;
+    align-items: center;
+  }
+  .select-input{
+    padding: 0 10px;
+    max-width: 150px;
+    border-bottom-#{$left}-radius: $border-radius-base;
+    border-top-#{$left}-radius: $border-radius-base;
+    margin-#{$right}: 5px;
+  }
+  .select__single-value{
+    font-weight: 400;
+  }
+  .search-input{
+    border-bottom-#{$right}-radius: $border-radius-base;
+    position: relative;
+    i{
+      position: absolute;
+      #{$left}: 13px;
+      top: 4px;
+      @include font-size(21px);
+      height: 20px;
+      z-index: 0;
+      @include opacity(1);
+    }
+    input{
+      background: transparent;
+      min-height: 35px;
+      border-bottom-#{$right}-radius: $border-radius-base;
+      width: 45px;
+      position: relative;
+      z-index: 1;
+      padding-#{$left}: 30px;
+      cursor: pointer;
+      @include transition(all, 0.5s, ease);
+      &:focus,
+      &:not(:placeholder-shown){
+        width: 200px;
+        padding-#{$left}: 40px;
+        cursor: text;
+        + i{
+          @include opacity(0.5);
+        }
+      }
+    }
+  }
+}
+.order-status{
+  display: flex;
+  align-items: flex-start;
+  padding-top: 7px;
+  @extend .list-inline;
+  li{
+    + li{
+      border-left: 1px solid rgba(55, 54, 60, 0.2);
+      padding-#{$left}: 0.5rem;
+    }
+  }
+  a{
+    display: flex;
+    align-items: center;
+    @include font-size(14px);
+    i{
+      @include opacity(0.5);
+      @include font-size(18px);
+      height: 18px;
+      display: inline-block;
+      margin-#{$right}: 5px;
+      overflow: hidden;
+      &.icon-shipping{
+        @include font-size(29px);
+        &:before{
+          top: -6px;
+        }
+      }
+    }
+  }
+}
+.filter-result{
+  padding-top: 1px;
+  padding-bottom: 1px;
+  background: rgba(55, 54, 60, 0.04);
+  margin: 15px 0;
+  @include border-radius-div;
+  ul{
+    margin: 10px 0;
+  }
+}
+.data{
+  width: 100%;
+  border-bottom-right-radius: $border-radius-base;
+  border-bottom-left-radius: $border-radius-base;
+  overflow: hidden;
+  th,
+  td{
+    padding: 15px;
+    line-height: 1;
+    white-space: nowrap;
+  }
+  th{
+    @include opacity(0.5);
+    @include font-size(14px);
+    font-weight: 400;
+    padding-top: 5px;
+  }
 
-    background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
-  	border: solid 1px #ccc;
-  	padding: side-values(9px 15px 9px 40px);
-  	-webkit-border-radius: 10em;
-  	-moz-border-radius: 10em;
-  	border-radius: side-values(0 20px 20px 20px);
-    background-color: white;
+  tbody{
 
-  	-webkit-transition: all .5s;
-  	-moz-transition: all .5s;
-  	transition: all .5s;
-    border: 0px;
-    width: 15px;
-  	@include padding-left(10px);
-  	color: transparent;
-  	cursor: pointer;
+    tr{
+      + tr{
+        border-top: 2px solid $light-gray;
+      }
+      &:first-child{
+        td:first-child{
+          border-top-#{$left}-radius: $border-radius-base;
+
+        }
+      }
+      &:hover{
+        button{
+          color: $brand-color;
+          @include opacity(1);
+        }
+      }
+    }
+    td{
+      background: $white;
+      @include font-size(16px);
+      &:empty{
+        display: none;
+      }
+      &:before{
+        margin-#{$right}: 5px;
+        top: 1px;
+      }
+      &.icon-shipping{
+        position: relative;
+        padding-#{$left}: 43px;
+        &:before{
+          position: absolute;
+          @include font-size(25px);
+          top: 11px;
+          #{$left}: 15px;
+        }
+      }
+      button{
+        background: transparent;
+        border-width: 0;
+        @include opacity(0.5);
+        cursor: pointer;
+        i{
+          margin-#{$right}: 5px;
+          &:before{
+            top: 1px;
+          }
+        }
+
+      }
+    }
   }
-  input:hover {
-  	background-color: #fff;
-  }
-  input:focus {
-  	width: 20px;
-  	@include padding-left(32px);
-  	color: #000;
-  	background-color: #fff;
-  	cursor: auto;
-  	-webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
-  	-moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
-  	box-shadow: 0 0 5px rgba(109,207,246,.5);
-  }
+
 }
   .card{
     background: none;
@@ -115,307 +242,5 @@
     height: 2px;
     opacity: 0.2;
     margin-bottom: 26px;
-  }
-  .table{
-    thead{
-      tr{
-        th{
-          @include padding-left(5px);
-          opacity: 0.7;
-          font-family: Roboto;
-          @include font-size(13px);
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-        }
-      }
-    }
-    tbody{
-    border-bottom-left-radius: 10px;
-      tr{
-        background: $white;
-        border-bottom: 2px solid #f7f7f7;
-        td{
-          @include padding-left(5px);
-          font-family: Roboto;
-          @include font-size(15px);
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-          color: $black;
-          .btn-light{
-            @include padding-left(0px);
-            background: none;
-            i{
-              opacity: 0.5;
-              @include font-size(15px);
-            }
-            span{
-              @include margin-left(5px);
-              opacity: 0.5;
-              font-family: Roboto;
-              @include font-size(13px);
-              font-weight: normal;
-              font-style: normal;
-              font-stretch: normal;
-              line-height: normal;
-              letter-spacing: normal;
-              text-align: left;
-            }
-          }
-        }
-        .icon{
-          display: flex;
-          margin-top: 12px;
-        }
-        .icon-clear:before{
-          @include margin-right(5px);
-          @include font-size(16px);
-        }
-        .icon-time:before{
-          @include margin-right(5px);
-          @include font-size(16px);
-        }
-        .icon-return:before{
-          @include margin-right(5px);
-          @include font-size(16px);
-        }
-        .icon-shipping:before{
-          @include margin-right(5px);
-          @include font-size(22px);
-        }
-      }
-    }
-    tr:last-child td:first-child {
-        border-bottom-left-radius: 20px;
-    }
-
-    tr:last-child td:last-child {
-        border-bottom-right-radius: 20px;
-    }
-    tr:first-child td:first-child{
-      border-top-left-radius: 20px
-    }
-    tr th{
-      padding-bottom: 10px;
-    }
-    tr:last-child{
-      border-bottom:none !important;
-    }
-  }
-}
-#Orders-container-mobile{
-  margin-top: 10px;
-#search{
-  input{
-    height: 20px;
-    -webkit-appearance: textfield;
-  	-webkit-box-sizing: content-box;
-  	font-family: inherit;
-  	font-size: 100%;
-    @include margin-right(100px);
-
-    background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
-  	border: solid 1px #ccc;
-  	padding: side-values(9px 15px 9px 40px);
-  	-webkit-border-radius: 10em;
-  	-moz-border-radius: 10em;
-  	border-radius: side-values(0 20px 20px 20px);
-    background-color: white;
-
-  	-webkit-transition: all .5s;
-  	-moz-transition: all .5s;
-  	transition: all .5s;
-    border: 0px;
-    width: 15px;
-  	@include padding-left(10px);
-  	color: transparent;
-  	cursor: pointer;
-  }
-  input:hover {
-  	background-color: #fff;
-  }
-  input:focus {
-  	width: 20px;
-  	@include padding-left(32px);
-  	color: #000;
-  	background-color: #fff;
-  	cursor: auto;
-  	-webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
-  	-moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
-  	box-shadow: 0 0 5px rgba(109,207,246,.5);
-  }
-}
-  .card{
-    background: none;
-  }
-  .Orders-search{
-    .col-9{
-      @include padding-left(0px);
-    }
-    @include padding-left(0px);
-    display: flex;
-    margin-bottom: 16px;
-    .select-input{
-      .css-10nd86i {
-        width: 100%;
-        background-color: $white;
-        border-radius: corner-values(20px 0 20px 20px) !important;
-        border: none !important;
-        position: relative !important;
-        padding: 10px;
-        .select__value-container{
-          width: 10px;
-        }
-      }
-      label,
-      br,sub{
-        display: none;
-      }
-    }
-    .RenderField{
-      border-radius: corner-values(0 20px 20px 20px);
-      border: none !important;
-      label,
-      br,sub{
-        display: none;
-      }
-      input{
-        border-radius: corner-values(0 20px 20px 20px);
-        border: none !important;
-      }
-    }
-    .btn-div{
-      margin-top: 20px;
-      margin-bottom: 20px;
-      display: flex;
-      .btn-light{
-        padding: 0px;
-        background: none;
-        display: flex !important;
-        i{
-          opacity: 0.5;
-          font-size: 16px;
-        }
-        span{
-          font-family: Roboto;
-          font-size: 14px;
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: 20px;
-          letter-spacing: normal;
-          text-align: left;
-          @include margin-left(3px);
-        }
-      }
-      .seperator{
-        width: 1px;
-        height: 19px;
-        @include margin-left(10px);
-        @include margin-right(10px);
-      }
-    }
-  }
-  .seperator{
-    width: 100%;
-    height: 2px;
-    opacity: 0.2;
-    margin-bottom: 26px;
-  }
-  .table{
-    thead{
-      tr{
-        th{
-          @include padding-left(5px);
-          opacity: 0.7;
-          font-family: Roboto;
-          @include font-size(13px);
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-        }
-      }
-    }
-    tbody{
-    border-bottom-left-radius: 10px;
-      tr{
-        background: $white;
-        border-bottom: 2px solid #f7f7f7;
-        td{
-          @include padding-left(5px);
-          font-family: Roboto;
-          @include font-size(15px);
-          font-weight: normal;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          letter-spacing: normal;
-          color: $black;
-          .btn-light{
-            @include padding-left(0px);
-            background: none;
-            i{
-              opacity: 0.5;
-              @include font-size(15px);
-            }
-            span{
-              @include margin-left(5px);
-              opacity: 0.5;
-              font-family: Roboto;
-              @include font-size(13px);
-              font-weight: normal;
-              font-style: normal;
-              font-stretch: normal;
-              line-height: normal;
-              letter-spacing: normal;
-              text-align: left;
-            }
-          }
-        }
-        .icon{
-          display: flex;
-          margin-top: 20px;
-        }
-        .icon-clear:before{
-          @include font-size(16px);
-        }
-        .icon-time:before{
-          @include font-size(16px);
-        }
-        .icon-return:before{
-          @include font-size(16px);
-        }
-        .icon-shipping:before{
-          @include font-size(22px);
-        }
-      }
-    }
-    td{
-      text-align: center;
-    }
-    tr:last-child td:first-child {
-        border-bottom-left-radius: 20px;
-    }
-
-    tr:last-child td:last-child {
-        border-bottom-right-radius: 20px;
-    }
-    tr:first-child td:first-child{
-      border-top-left-radius: 20px
-    }
-    tr th{
-      padding-bottom: 10px;
-      text-align: center;
-    }
-    tr:last-child{
-      border-bottom:none !important;
-    }
   }
 }
