--- a/scss/modules/_blocks.scss
+++ b/scss/modules/_blocks.scss
@@ -476,6 +476,9 @@
     input{
       box-shadow: 0px 1px 1px 0px #e8d59a;
     }
+      input:-webkit-autofill{
+      box-shadow: inset  0 0 0 30px $light-gray, 0px 1px 1px 0px #e8d59a !important;
+    }
     [class^='icon-']{
       color: #856404;
     }
@@ -488,6 +491,10 @@
   &.true{
     input{
       box-shadow: 0px 1px 1px 0px rgba(48, 213, 118, 0.7);
+      
+    }
+    input:-webkit-autofill{
+      box-shadow: inset  0 0 0 30px $light-gray, 0px 1px 1px 0px rgba(48, 213, 118, 0.7) !important;
     }
     [class^='icon-']{
       color: #30d576;
