--- a/scss/modules/_select.scss
+++ b/scss/modules/_select.scss
@@ -33,8 +33,8 @@
       position: absolute;
       min-width: 100%;
       width: auto;
-      left: 0;
-      margin-top: 0 !important;
+      #{$left}: 0;
+      margin-top: 2px !important;
       height: auto;
       display: block;
       border-radius: $border-radius-base 0 $border-radius-base $border-radius-base;
@@ -42,7 +42,7 @@
       @include box-shadow;
       &::after {
       	bottom: 100%;
-      	right: 10px;
+      	#{$right}: 10px;
       	border: solid transparent;
       	content: " ";
       	height: 0;
@@ -52,10 +52,11 @@
       	border-color: rgba(213, 210, 204, 0);
       	border-bottom-color: $light-gray;
       	border-width: 7px;
-      	margin-left: -4px;
-        margin-bottom: -4px;
+      	margin-#{$left}: -4px;
+        margin-top: -2px;
     }
     .select__menu-list {
+      padding-top: 0 !important;
       padding-bottom: 0;
       border-radius: $border-radius-base 0 $border-radius-base $border-radius-base;
       .select__option {
