--- a/src/scss/modules/_components.scss
+++ b/src/scss/modules/_components.scss
@@ -1024,6 +1024,7 @@
   background: $white;
   width: 85%;
   overflow-x: hidden;
+  top: 60px !important;
 }
 .isDisabled {
   color: currentColor;
