done with both pending and replied reqs

--- a/src/scss/layouts/setting/_setting.scss
+++ b/src/scss/layouts/setting/_setting.scss
@@ -484,7 +484,7 @@
       }
     }
     .parts-list{
-      padding: 5px 15px 0;
+      padding: 5px 15px 15px;
       .d-table{
         width: 100%;
         .d-table-cell{
