--- a/src/scss/modules/_components.scss
+++ b/src/scss/modules/_components.scss
@@ -923,7 +923,7 @@
   [type="radio"]:checked,
   [type="radio"]:not(:checked) {
       position: absolute;
-      left: -9999px;
+      #{$left}: -9999px;
   }
   [type="radio"]:checked + label,
   [type="radio"]:not(:checked) + label
@@ -939,7 +939,7 @@
   [type="radio"]:not(:checked) + label:before {
       content: '';
       position: absolute;
-      left: 0;
+      #{$left}: 0;
       top: 0;
       width: 13px;
       height: 13px;
